docs-website/versioned_docs/version-2.18/pipeline-components/generators.mdx
---
title: "Generators"
id: generators
slug: "/generators"
description: "Generators are responsible for generating text after you give them a prompt. They are specific for each LLM technology (OpenAI, local, TGI and others)."
---

# Generators

Generators are responsible for generating text after you give them a prompt. They are specific for each LLM technology (OpenAI, local, TGI and others).

| Generator                                                            | Description                                                                                                                                                                                                              | Streaming Support |
| :------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :---------------- |
| [AmazonBedrockChatGenerator](generators/amazonbedrockchatgenerator.mdx)       | Enables chat completion using models through Amazon Bedrock service.                                                                                                                                                     | ✅                 |
| [AmazonBedrockGenerator](generators/amazonbedrockgenerator.mdx)               | Enables text generation using models through Amazon Bedrock service.                                                                                                                                                     | ✅                 |
| [AnthropicChatGenerator](generators/anthropicchatgenerator.mdx)                 | This component enables chat completions using Anthropic large language models (LLMs).                                                                                                                                    | ✅                 |
| [AnthropicVertexChatGenerator](generators/anthropicvertexchatgenerator.mdx)     | This component enables chat completions using AnthropicVertex API.                                                                                                                                                       | ✅                 |
| [AnthropicGenerator](generators/anthropicgenerator.mdx)                         | This component enables text completions using Anthropic large language models (LLMs).                                                                                                                                    | ✅                 |
| [AzureOpenAIChatGenerator](generators/azureopenaichatgenerator.mdx)           | Enables chat completion using OpenAI’s LLMs through Azure services.                                                                                                                                                      | ✅                 |
| [AzureOpenAIGenerator](generators/azureopenaigenerator.mdx)                   | Enables text generation using OpenAI’s LLMs through Azure services.                                                                                                                                                      | ✅                 |
| [CohereChatGenerator](generators/coherechatgenerator.mdx)                     | Enables chat completion using Cohere's LLMs.                                                                                                                                                                             | ✅                 |
| [CohereGenerator](generators/coheregenerator.mdx)                             | Queries the LLM using Cohere API.                                                                                                                                                                                        | ✅                 |
| [GoogleAIGeminiChatGenerator](generators/googleaigeminichatgenerator.mdx)     | Enables chat completion using Google Gemini models. **_This integration will be deprecated soon. We recommend using [GoogleGenAIChatGenerator](generators/googlegenaichatgenerator.mdx) integration instead._**                     | ✅                 |
| [GoogleAIGeminiGenerator](generators/googleaigeminigenerator.mdx)             | Enables text generation using Google Gemini models. **_This integration will be deprecated soon. We recommend using [GoogleGenAIChatGenerator](generators/googlegenaichatgenerator.mdx)  integration instead._**                    | ✅                 |
| [GoogleGenAIChatGenerator](generators/googlegenaichatgenerator.mdx)             | Enables chat completion using Google Gemini models through Google Gen AI SDK.                                                                                                                                            | ✅                 |
| [HuggingFaceAPIChatGenerator](generators/huggingfaceapichatgenerator.mdx)     | Enables chat completion using various Hugging Face APIs.                                                                                                                                                                 | ✅                 |
| [HuggingFaceAPIGenerator](generators/huggingfaceapigenerator.mdx)             | Enables text generation using various Hugging Face APIs.                                                                                                                                                                 | ✅                 |
| [HuggingFaceLocalChatGenerator](generators/huggingfacelocalchatgenerator.mdx) | Provides an interface for chat completion using a Hugging Face model that runs locally.                                                                                                                                  | ✅                 |
| [HuggingFaceLocalGenerator](generators/huggingfacelocalgenerator.mdx)         | Provides an interface to generate text using a Hugging Face model that runs locally.                                                                                                                                     | ✅                 |
| [LlamaCppChatGenerator](generators/llamacppchatgenerator.mdx)                   | Enables chat completion using an LLM running on Llama.cpp.                                                                                                                                                               | ❌                 |
| [LlamaCppGenerator](generators/llamacppgenerator.mdx)                         | Generate text using an LLM running with Llama.cpp.                                                                                                                                                                       | ❌                 |
| [LlamaStackChatGenerator](generators/llamastackchatgenerator.mdx)         | Enables chat completions using an LLM model made available via Llama Stack server                                                                                                                                        | ✅                 |
| [MetaLlamaChatGenerator](generators/metallamachatgenerator.mdx)                 | Enables chat completion with any model hosted available with Meta Llama API.                                                                                                                                             | ✅                 |
| [MistralChatGenerator](generators/mistralchatgenerator.mdx)                   | Enables chat completion using Mistral’s text generation models.                                                                                                                                                          | ✅                 |
| [NvidiaChatGenerator](generators/nvidiachatgenerator.mdx)                       | Enables chat completion using Nvidia-hosted models.                                                                                                                                                                      | ✅                 |
| [NvidiaGenerator](generators/nvidiagenerator.mdx)                             | Provides an interface for generating text using LLMs self-hosted with NVIDIA NIM or models hosted on the NVIDIA API catalog.                                                                                             | ❌                 |
| [OllamaChatGenerator](generators/ollamachatgenerator.mdx)                     | Enables chat completion using an LLM running on Ollama.                                                                                                                                                                  | ✅                 |
| [OllamaGenerator](generators/ollamagenerator.mdx)                             | Provides an interface to generate text using an LLM running on Ollama.                                                                                                                                                   | ✅                 |
| [OpenAIChatGenerator](generators/openaichatgenerator.mdx)                     | Enables chat completion using OpenAI’s large language models (LLMs).                                                                                                                                                     | ✅                 |
| [OpenAIGenerator](generators/openaigenerator.mdx)                             | Enables text generation using OpenAI's large language models (LLMs).                                                                                                                                                     | ✅                 |
| [OpenRouterChatGenerator](generators/openrouterchatgenerator.mdx)               | Enables chat completion with any model hosted on OpenRouter.                                                                                                                                                             | ✅                 |
| [SagemakerGenerator](generators/sagemakergenerator.mdx)                       | Enables text generation using LLMs deployed on Amazon Sagemaker.                                                                                                                                                         | ❌                 |
| [STACKITChatGenerator](generators/stackitchatgenerator.mdx)                     | Enables chat completions using the STACKIT API.                                                                                                                                                                          | ✅                 |
| [VertexAICodeGenerator](generators/vertexaicodegenerator.mdx)                 | Enables code generation using Google Vertex AI generative model.                                                                                                                                                         | ❌                 |
| [VertexAIGeminiChatGenerator](generators/vertexaigeminichatgenerator.mdx)     | Enables chat completion using Google Gemini models with GCP Vertex AI. **_This integration will be deprecated soon. We recommend using [GoogleGenAIChatGenerator](generators/googlegenaichatgenerator.mdx)  integration instead._** | ✅                 |
| [VertexAIGeminiGenerator](generators/vertexaigeminigenerator.mdx)             | Enables text generation using Google Gemini models with GCP Vertex AI. **_This integration will be deprecated soon. We recommend using [GoogleGenAIChatGenerator](generators/googlegenaichatgenerator.mdx)  integration instead._** | ✅                 |
| [VertexAIImageCaptioner](generators/vertexaiimagecaptioner.mdx)               | Enables text generation using Google Vertex AI `imagetext` generative model.                                                                                                                                             | ❌                 |
| [VertexAIImageGenerator](generators/vertexaiimagegenerator.mdx)               | Enables image generation using Google Vertex AI generative model.                                                                                                                                                        | ❌                 |
| [VertexAIImageQA](generators/vertexaiimageqa.mdx)                             | Enables text generation (image captioning) using Google Vertex AI generative models.                                                                                                                                     | ❌                 |
| [VertexAITextGenerator](generators/vertexaitextgenerator.mdx)                 | Enables text generation using Google Vertex AI generative models.                                                                                                                                                        | ❌                 |
| [WatsonxGenerator](generators/watsonxgenerator.mdx)                             | Enables text generation with IBM Watsonx models.                                                                                                                                                                         | ✅                 |
| [WatsonxChatGenerator](generators/watsonxchatgenerator.mdx)                     | Enables chat completions with IBM Watsonx models.                                                                                                                                                                        | ✅                 |
